--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+    <servlet>
+        <servlet-name>welcomeTextServlet</servlet-name>
+        <servlet-class>servlet.WelcomeTextServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+    <servlet-name>welcomeTextServlet</servlet-name>
+    <url-pattern>/welcomeText</url-pattern>
+    </servlet-mapping>
+
 </web-app>
