Ajout exercice en graphique

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,4 +14,15 @@
     <url-pattern>/welcomeText</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>addTrainingServlet</servlet-name>
+        <servlet-class>servlet.AddTrainingServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>addTrainingServlet</servlet-name>
+        <url-pattern>/addTraining</url-pattern>
+    </servlet-mapping>
+
 </web-app>
