--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 
     <servlet>
         <servlet-name>TokenVerifier</servlet-name>
-        <servlet-class>servlet.TokenVerifier</servlet-class>
+        <servlet-class>servlet.TokenVerifierServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>TokenVerifier</servlet-name>
