User unlinked des plans. Page détail des plans pour un user Ajax/Servlet/html quite ok A revoir fortement je pense Courage :p

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,6 +64,15 @@
         <url-pattern>/addQueue</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>GetUserPlansServlet</servlet-name>
+        <servlet-class>servlet.GetUserPlansServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GetUserPlansServlet</servlet-name>
+        <url-pattern>/getUserPlans</url-pattern>
+    </servlet-mapping>
+
 
 
 </web-app>
